Warning fixes